[tool.poetry]
name = "pubsubtk"
version = "0.2.1"
description = "tkinterとpypubsubを組み合わせた全く新しい()アーキテクチャ"
authors = ["va"]
readme = "README.md"
packages = [
    { include = "pubsubtk", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
pypubsub = "^4.0.3"
pydantic = "^2.11.4"
ttkthemes = "^3.2.2"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
